@@ -2,6 +2,13 @@
   This is the main todo org mode file for the fwknop project
 ** COMPLETED
    This bucket is for completed tasks.
+*** Preserve existing configs under 'make install'
+    :CLOSED: <2012-08-13 Mon>
+    - The current 'make install' behavior overwrites any existing fwknopd config
+    files from a previous installation.
+    - Updated to install fwknopd.conf -> /etc/fwknop/fwknopd.conf.inst if the
+      fwknopd.conf file already exists, and similarly for the access.conf
+      file.
 *** fwknopd iptables comment match detection
     :CLOSED: <2012-08-12 Sun>
    Hank Leininger suggested that fwknopd do better detection for the iptables
@@ -20,3 +27,4 @@
 ** ipfw active/expire sets cannot be the same
    Add a check to ensure that active and expire sets are not the same value in
    fwknopd.conf, and add a corresponding test in the test suite.
+
